@@ -24,7 +24,7 @@ django-extended-choices = git https://github.com/twidi/django-extended-choices.g
 # Still under development
 mapentity = git https://github.com/makinacorpus/Geotrek.git branch=mapentity
 paperclip = git https://github.com/makinacorpus/Geotrek.git branch=paperclip
-django-leaflet = git https://github.com/makinacorpus/django-leaflet.git rev=a0e90b54d50c11ed3dd72fed03de2953b27d2a55
+django-leaflet = git https://github.com/makinacorpus/django-leaflet.git branch=0.4
 django-geojson = git https://github.com/makinacorpus/django-geojson.git rev=66093d737886d725b5fcd8d07a872995d9059be6
 django-appypod = git https://github.com/makinacorpus/django-appypod.git
 django-screamshot = git https://github.com/makinacorpus/django-screamshot.git
