@@ -12,6 +12,7 @@ create config files of nginx, etc.
 """
 import os
 
+from django.core.exceptions import ImproperlyConfigured
 from django.conf.global_settings import LANGUAGES as LANGUAGES_LIST
 
 from . import EnvIniReader
@@ -77,6 +78,11 @@ DEFAULT_STRUCTURE_NAME = envini.get('defaultstructure')
 
 SRID = int(envini.get('srid', SRID))
 SPATIAL_EXTENT = tuple(envini.getfloats('spatial_extent'))
+
+# Due to bug in Leaflet/Proj4Leaflet ()
+# landscape extents are not supported.
+if (SPATIAL_EXTENT[2] - SPATIAL_EXTENT[0] > SPATIAL_EXTENT[3] - SPATIAL_EXTENT[1]):
+    raise ImproperlyConfigured('Landscape spatial_extent not supported (%s).' % (SPATIAL_EXTENT,))
 
 LEAFLET_CONFIG['TILES_URL'] = [
     (gettext_noop('Scan'), '%s/tiles/scan/{z}/{x}/{y}.png' % ROOT_URL),
