@@ -46,6 +46,11 @@ CHANGELOG
     Have a look at ``conf/settings.ini.sample`` to clean-up unnecessary values from your
     settings file.
 
+* Fix paths offset for portrait spatial extent (fixes #732)
+* Due to bug in Leaflet/Proj4Leaflet (https://github.com/kartena/Proj4Leaflet/issues/37)
+  landscape spatial extents are not supported. Please adjust spatial_extent to be a portrait or square,
+  or application will raise *ImproperlyConfiguredError*.
+
 
 0.19.1 (2013-07-15)
 -------------------
